# build-a-coding-agent

./: README.md  pyproject.toml
src/agent/: agent.py
src/build_a_coding_agent/: __init__.py
src/tools/: __init__.py  edit_file.py  list_files.py  read_file.py  tool.py
