[project]
name = "build-a-coding-agent"
version = "0.1.0"
description = "Learn how to build a coding agent from scratch"
readme = "README.md"
authors = [
    { email = "minjiezha@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.41.0",
]

[project.scripts]
build-a-coding-agent = "build_a_coding_agent:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
